got rest server working