@@ -108,6 +108,50 @@
       </manifest>
 		<jar destfile="${dist}/${project.name}-${version}.jar" manifest="MANIFEST.MF" basedir="${build}" />
 	</target>
+	
+	 <target name="war" depends="dist">
+      <war destfile="${dist}/${project.name}.war" webxml="${resources}/web.xml">
+              <lib dir="${dist}">
+                <include name="*.jar"/>
+              </lib>
+              <lib dir="${lib.dir}" excludes="servlet-api.jar">
+                <include name="*.jar"/>
+              </lib>
+              <classes dir="${resources}" excludes="web.xml" />
+      </war>
+    </target>
+    
+    <target name="run-server" depends="war" description="--> run server">
+            <java fork="true" jar="${lib.base}/server/zoie-server.jar" failonerror="true" maxmemory="1g">
+                <sysproperty key="log.home" value="${logs}" />
+                <sysproperty key="conf.dir" value="server-conf" />
+                <!-- <jvmarg value="-d64" /> -->
+                <jvmarg value="-server" />
+                <jvmarg value="-Xms512m" />
+                <jvmarg value="-Xmx1g" />
+                <jvmarg value="-Xloggc:${logs}/gc.log" />
+                <jvmarg value="-XX:+PrintGCTimeStamps" />
+                <jvmarg value="-XX:+PrintGCDetails" />
+                <jvmarg value="-XX:+AggressiveHeap" />
+                <jvmarg value="-XX:+UseAdaptiveSizePolicy" />
+                <!--jvmarg value="-XX:+UseConcMarkSweepGC" /-->
+                <!--jvmarg value="-XX:MaxTenuringThreshold=10" /-->
+                <!--jvmarg value="-XX:+UseParallelGC" /-->
+                <jvmarg value="-XX:NewRatio=1" />
+                <jvmarg value="-XX:SurvivorRatio=2" />
+                <jvmarg value="-Dcom.sun.management.jmxremote" />
+                <jvmarg value="-Dcom.sun.management.jmxremote.port=9999" />
+                <jvmarg value="-Dcom.sun.management.jmxremote.authenticate=false" />
+                <jvmarg value="-Dcom.sun.management.jmxremote.ssl=false" />
+                <!-- uncomment to turn on debugging
+                                <jvmarg value="-Xrunjdwp:transport=dt_socket,address=8886,server=y,suspend=y" />
+                                -->
+                <!--jvmarg value="-agentpath:/Users/xgu/Downloads/YourKit_Java_Profiler_8.0.18.app/bin/mac/libyjpagent.jnilib" /-->
+                <!-- uncomment to turn on yourkit profiling
+                                <jvmarg value="-agentlib:yjpagent" />
+                                -->
+            </java>
+    </target>
 
 	<target name="test-build" depends="dist">
 		<javac debug="true" destdir="${build.test}" compiler="javac1.6" source="1.6" target="1.6">
